@@ -1,3 +1,10 @@
+2006-03-02  Sergey Udaltsov <svu@gnome.org>
+
+	Fixes #336396
+
+	* gnome-keyboard-properties-xkblt.c: fixed the buttons sensitivity
+	change.
+	
 2006-01-26  Rodrigo Moya <rodrigownovell.com>
 
 	Fixes #328748
